<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="177dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/tvInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="47dp"
        android:text="@string/instructions"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:textSize="8sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="122dp"
        android:text="@string/all_time_statistics"
        app:layout_constraintBottom_toTopOf="@+id/tvStatistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="177dp"
        android:text="@string/win_lose_draw_statistics"
        app:layout_constraintBottom_toTopOf="@+id/tvGameResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvGameResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="41dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistics" />

    <Button
        android:id="@+id/btnRock"
        android:layout_width="124dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="423dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:backgroundTintMode="add"
        android:foreground="@drawable/rock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPaper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnPaper"
        android:layout_width="124dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="423dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:backgroundTintMode="add"
        android:foreground="@drawable/paper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnScissors"
        app:layout_constraintStart_toEndOf="@+id/btnRock"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnScissors"
        android:layout_width="124dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="423dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:backgroundTintMode="add"
        android:foreground="@drawable/scissors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPaper"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="@string/versus"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/btnPaper"
        app:layout_constraintEnd_toStartOf="@+id/tvUserMove"
        app:layout_constraintStart_toEndOf="@+id/tvComputerMove"
        app:layout_constraintTop_toBottomOf="@+id/tvGameResult" />

    <TextView
        android:id="@+id/tvComputerMove"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/btnRock"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistics" />

    <TextView
        android:id="@+id/tvUserMove"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/btnScissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/tvStatistics" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="106dp"
        android:text="@string/computer"
        app:layout_constraintBottom_toTopOf="@+id/btnRock"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvComputerMove"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="106dp"
        android:text="@string/user"
        app:layout_constraintBottom_toTopOf="@+id/btnScissors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/tvUserMove" />
</androidx.constraintlayout.widget.ConstraintLayout>